--- a/数据库.md
+++ b/数据库.md
@@ -53,12 +53,13 @@ WHERE
 ~~~
 
 
+
 #### 2.前后模糊like查询，%xxx%,使用pg_trgm
 
 **创建索引:**
 ~~~
 create extension pg_trgm; 
-create index tsl_ticket_num_like_2_idx on tsl using gin (UPPER (ticket_num) gin_trgm_ops);      
+create index tsl_ticket_num_like_idx on tsl using gin (UPPER (ticket_num) gin_trgm_ops);      
 
 ~~~
 **sql:**
@@ -70,6 +71,48 @@ FROM
 WHERE
 	UPPER ( ticket_num ) LIKE'%081-2761367%' 
 	LIMIT 15 
+~~~
+
+#### 3.组合索引，where a=1 and/or b=2
+and:可以同时给a、b建立一个索引
+or:分别建立各个索引，pg能够自动组合多个索引
+**创建索引：**
+~~~
+create index tsl_ticket_num_like_idx on tsl using gin(UPPER(ticket_num) gin_trgm_ops);
+create index tsl_pnr_code_like_idx on tsl using gin (UPPER (pnr_code) gin_trgm_ops);
+~~~
+**sql:**
+~~~
+EXPLAIN ( ANALYZE, VERBOSE, timing, costs, buffers ) SELECT
+id,ticket_num,pnr_code
+FROM
+	"tsl" 
+WHERE
+	UPPER ( ticket_num ) LIKE'%081-2761367%'
+or 	
+UPPER ( pnr_code ) LIKE'%081-2761367%'
+	LIMIT 15
+~~~
+**结果：**
+~~~
+Limit  (cost=152.07..182.41 rows=8 width=25) (actual time=0.894..0.895 rows=1 loops=1)
+  Output: id, ticket_num, pnr_code
+  Buffers: shared hit=46
+  ->  Bitmap Heap Scan on public.tsl  (cost=152.07..182.41 rows=8 width=25) (actual time=0.892..0.893 rows=1 loops=1)
+        Output: id, ticket_num, pnr_code
+        Recheck Cond: ((upper((tsl.ticket_num)::text) ~~ '%081-2761367%'::text) OR (upper((tsl.pnr_code)::text) ~~ '%081-2761367%'::text))
+        Heap Blocks: exact=1
+        Buffers: shared hit=46
+        ->  BitmapOr  (cost=152.07..152.07 rows=8 width=0) (actual time=0.874..0.874 rows=0 loops=1)
+              Buffers: shared hit=45
+              ->  Bitmap Index Scan on tsl_ticket_num_like_idx  (cost=0.00..76.03 rows=4 width=0) (actual time=0.803..0.803 rows=1 loops=1)
+                    Index Cond: (upper((tsl.ticket_num)::text) ~~ '%081-2761367%'::text)
+                    Buffers: shared hit=26
+              ->  Bitmap Index Scan on tsl_pnr_code_like_idx  (cost=0.00..76.03 rows=4 width=0) (actual time=0.069..0.069 rows=0 loops=1)
+                    Index Cond: (upper((tsl.pnr_code)::text) ~~ '%081-2761367%'::text)
+                    Buffers: shared hit=19
+Planning time: 0.198 ms
+Execution time: 1.069 ms
 ~~~
 
 ## 五、
