--- a/数据库.md
+++ b/数据库.md
@@ -5,6 +5,10 @@
 2. ACID
 3. AUTOCOMMIT
 
+### 悲观锁 vs 乐观锁
+* 1.悲观锁：使用db锁机制(事务、select ...for update )，整个数据处理过程中，将数据处于锁定状态。
+* 2.乐观锁：使用version字段，set a=b,version=version+1 where version=update前获取的值。
+
 ## 二、并发一致性问题
 1. 丢失修改
 2. 读脏数据
