--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -4,25 +4,36 @@
 ### 创建型
 - 解释：不直接使用new实例化对象，而是一种在创建对象的同时隐藏实例化的细节。
 - 包括：Factory 、Builder 
-- 1.Factory：
-- 2.Builder模式：创建型模式，一步一步创建最终对象
+####  1.Factory：创建对象的方式
+   - 优点：解耦了客户端直接创建new对象的职责，缺点：增加类及其接口的实现
+   - 场景：不同类型订单(团队、散客、国内、国际)的实现
+####  2.Builder模式：创建型模式，一步一步创建最终对象
   - 与工厂模式的区别是：建造者模式更加关注与零件装配的顺序。
 
-2.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
-3.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
-4.Adapter:转换行为
-5.Proxy：控制访问行为，不直接使用原对象，通过代理类来做，保证业务低耦合
-6.Strategy：行为型模式，每一种策略封装成一个类，根据策略的变化调用不同行为(类)
-  * 优点：解决if else 问题，可扩展性好，缺点：写很多个策略类，代码多
-  * 场景：1.机票售价：正常、打折、赠送等 2.春运回家选择 飞机、火车、汽车。
+### 结构型
+ - 解释：解决类和对象的组合
+ - 包括：
+####  1.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
+####  2.Adapter:转换行为
+####  3.Proxy：控制访问行为，不直接使用原对象，通过代理类来做，保证业务低耦合
+####   4.Bridge：
+####   5.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
 
-7.State：行为型模式，对象内部状态改变时改变它的行为
+
+### 行为型
+ - 解释：处理对象之间的通信及对象之间的职责，便于代码可维护性和可扩展性
+ - 包括：
+ ####   1.Strategy：行为型模式，每一种策略封装成一个类，根据策略的变化调用不同行为(类)
+  * 优点：解决if else 问题，可扩展性好，缺点：写很多个策略类，代码多
+  * 场景：1.机票售价：正常、打折、赠送等 2.春运回家选择 飞机、火车、汽车。   
+ 
+
+ ####   2.State：行为型模式，对象内部状态改变时改变它的行为
   * 优点：解决if else 问题，缺点：写很多状态类
   * 场景：订单状态改变：待支付、已支付、待配送
   * 与strategy区别：state 根据自身条件改变自动执行相应行为(方法)，后者调用者指定使用哪个策略类
 
-8.Bridge:
-9.Observe：
+ ####   3.Observe：定义对象之间，一对多的依赖关系。一个对象变化后通知依赖它的对象
  * 优点
 
 
