--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -1,7 +1,7 @@
 
 ## 常用设计模式
 
-### 创建型
+###  一、创建型
 - 解释：不直接使用new实例化对象，而是一种在创建对象的同时隐藏实例化的细节。
 - 包括：Factory 、Builder 
 ####  1.Factory：创建对象的方式
@@ -10,7 +10,7 @@
 ####  2.Builder模式：创建型模式，一步一步创建最终对象
   - 与工厂模式的区别是：建造者模式更加关注与零件装配的顺序。
 
-### 结构型
+### 二、结构型
  - 解释：解决类和对象的组合
  - 包括：
 ####  1.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
@@ -20,7 +20,7 @@
 ####   5.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
 
 
-### 行为型
+### 三、行为型
  - 解释：处理对象之间的通信及对象之间的职责，便于代码可维护性和可扩展性
  - 包括：
  ####   1.Strategy：行为型模式，每一种策略封装成一个类，根据策略的变化调用不同行为(类)
