--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -1,13 +1,39 @@
+## 前言
+   最近国足以三次失误0:3告别了亚洲杯，里皮这位世界级教练卸任。从医患层面看，病入膏肓的时候，再好的名医只能对症下药，不能根治疾病，由此也不难理解，扁鹊见蔡桓公的疾走了。从架构层面看，里皮是位优秀的架构师，但中国足球底层的基础无法支撑顶层的架构，于是兵败亚洲杯也就明白了。所以系统的基础设施层是非常重要的，做好基础，从设计原则及设计模式开始吧。
+   
+### 设计模式的六大原则
+
+1. 单一职责原则 Single Responsibility Principle
+  一个类有且仅有一个职责，只有一个引起它变化的原因
+ 实质："高内聚(功能内聚)，低耦合(类职责划分)"
+
+2. 开闭原则  Open Closed Principle
+  一个对象对扩展开放，对修改关闭。实质：对类的改动是通过增加代码进行的，而不是修改现有代码。
+对应设计模式：策略模式和模板模式。
+
+3. 里氏替换原则  Liskov Substitution Principle
+ 在任何父类出现的地方都可以用它的子类来替代。实质：同一个继承体系中的对象应该有共同的行为特征。 多用组合少用继承
+
+4. 接口分离原则 Interface Segregation Principle
+ 应该遵循最小接口原则，这也是高内聚的一种表现，减少胖接口
+
+5. 依赖注入原则  Dependence Inversion Principle
+ 高层(调用者)不直接依赖于底层(具体实现类)，依赖于接口(抽象)，降低耦合
+计算机的世界里没有是中间层解决不了的问题
+
+6. 迪米特原则 Law of Demeter
+  引入一个合理的第三者，降低对象之间的耦合度。
+
 
 ## 常用设计模式
 
-###  一、创建型
+### 一、创建型
 - 解释：不直接使用new实例化对象，而是一种在创建对象的同时隐藏实例化的细节。
 - 包括：Factory 、Builder 
-####  1.Factory：创建对象的方式
-   - 优点：解耦了客户端直接创建new对象的职责，缺点：增加类及其接口的实现
+####  1.Factory：根据条件不同，创建不同对象
+   - 优点：解耦了客户端直接创建new对象的职责，降低对象之间耦合；，缺点：增加类及其接口的实现
    - 场景：不同类型订单(团队、散客、国内、国际)的实现
-####  2.Builder模式：创建型模式，一步一步创建最终对象
+####  2.Builder模式：一步一步创建最终对象
   - 与工厂模式的区别是：建造者模式更加关注与零件装配的顺序。
 
 ### 二、结构型
@@ -16,8 +42,8 @@
 ####  1.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
 ####  2.Adapter:转换行为
 ####  3.Proxy：控制访问行为，不直接使用原对象，通过代理类来做，保证业务低耦合
-####   4.Bridge：
-####   5.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
+####  4.Bridge：
+####  5.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
 
 
 ### 三、行为型
@@ -35,9 +61,4 @@
 
  ####   3.Observe：定义对象之间，一对多的依赖关系。一个对象变化后通知依赖它的对象
  * 优点
-
-
-
-
-
 
