--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -60,5 +60,7 @@
   * 与strategy区别：state 根据自身条件改变自动执行相应行为(方法)，后者调用者指定使用哪个策略类
 
  ####   3.Observe：定义对象之间，一对多的依赖关系。一个对象变化后通知依赖它的对象
- * 优点
+ * 优点:解耦观察者和被观察者 缺点：如果观察者多的话，每次都需要遍历通知，建议采用异步方式。
+ * 场景：订单创建成功后，短信通知 客户、供应商、销售或者操作
+
 
