--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -42,7 +42,9 @@
 ####  1.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
 ####  2.Adapter:转换行为
 ####  3.Proxy：控制访问行为，不直接使用原对象，通过代理类来做，保证业务低耦合
-####  4.Bridge：
+####  4.Bridge：抽象与实现的分离，两者都可以独立变化
+  * 优点：遵循开闭原则、只扩展，不修改，缺点：设计设计及代码理解复杂
+  * 场景：两个独立变化的维度 公司订单oa审批消息分类，分普通、加急、特急；发送消息类型分站内、邮件、短信
 ####  5.Facade：提供对外统一api,隐藏实现细节，保证业务高内聚
 
 
