--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -65,4 +65,7 @@
  * 优点:解耦观察者和被观察者 缺点：如果观察者多的话，每次都需要遍历通知，建议采用异步方式。
  * 场景：订单创建成功后，短信通知 客户、供应商、销售或者操作
 
+### 4.Template：一个抽象类定义方法的骨干，由子类具体去实现
+* 优点:算法抽象、行为由父类控制、子类实现 缺点：写多个子类，代码量增多
+* 场景：不同登录方式(微信、手机、qq、微博)，骨干代码(1.验证参数、2.加lock，同时只有一个登录、3.查询账号是否存在、4.新增账户)
 
