--- a/设计模式2(工作中).md
+++ b/设计模式2(工作中).md
@@ -40,7 +40,10 @@
  - 解释：解决类和对象的组合
  - 包括：
 ####  1.Decorator：遵循开闭原则(对修改是关闭的，对扩展是开放的)，新增行为，给原有对象新增职责，不修改原有的方法
-####  2.Adapter:转换行为
+####  2.Adapter:转换行为,让两个没有类联类一起工作
+* 优点:类的复用性 缺点：过多适配，会造成系统复杂性
+* 场景：系统设计阶段不会用到适配类，而在临时性功能。例如，ca 一直使用a政策，现在也有有b政策，在a里面适配一下b,让ca一起调用。
+
 ####  3.Proxy：控制访问行为，不直接使用原对象，通过代理类来做，保证业务低耦合
 ####  4.Bridge：抽象与实现的分离，两者都可以独立变化
   * 优点：遵循开闭原则、只扩展，不修改，缺点：设计设计及代码理解复杂
@@ -65,7 +68,7 @@
  * 优点:解耦观察者和被观察者 缺点：如果观察者多的话，每次都需要遍历通知，建议采用异步方式。
  * 场景：订单创建成功后，短信通知 客户、供应商、销售或者操作
 
-### 4.Template：一个抽象类定义方法的骨干，由子类具体去实现
+#### 4.Template：一个抽象类定义方法的骨干，由子类具体去实现
 * 优点:算法抽象、行为由父类控制、子类实现 缺点：写多个子类，代码量增多
 * 场景：不同登录方式(微信、手机、qq、微博)，骨干代码(1.验证参数、2.加lock，同时只有一个登录、3.查询账号是否存在、4.新增账户)
 
