--- a/微服务-分布式事务问题.md
+++ b/微服务-分布式事务问题.md
@@ -4,3 +4,21 @@
 
 
 ## 解决方案
+* 1.2pc 、3pc 、tcc
+* 2.柔性事务：
+  - 消息队列异步化操作：注意保证消息不丢失、保证消息不重复消息
+  - 后台console进程：定时check，根据状态机去执行(或者结合查询模式，先查一下，然后再决定是否补偿）
+  - 查询模式：执行成功后，再查询一次，确保无误
+  
+  ### 2pc 、3pc 、tcc
+   todo
+  
+  ### 消息队列异步化操
+  
+  todo
+  ###  后台console进程
+  
+  todo
+  ### 查询模式
+  
+  todo
