--- a/微服务-分布式事务问题.md
+++ b/微服务-分布式事务问题.md
@@ -1,11 +1,11 @@
-## 场景
+## 一、场景
  * 用户注册，赠送钻石(或者积分)
 
-## 理论来源
+## 二、理论来源
 * 传统事务ACID
 * CAP：牺牲一致性C，追求最终一致性
 * BASE:是CAP的延伸，牺牲强一致性，获得高可用,即柔性事务
-## 解决方案
+## 三、解决方案
 * 1.2pc 、3pc 、tcc
 * 2.柔性事务：
   - 消息队列异步化操作：消息是不可靠的，支持重试但要保证api幂等性，业务场景不同，幂等也不同，最简单根据业务流水ID做去重(排重表)
