--- a/高并发下幂等性设计小结.md
+++ b/高并发下幂等性设计小结.md
@@ -32,7 +32,7 @@
     - 1.悲观锁：一般在事务中用，排它锁
     - 2.乐观锁：通过版本号机制,注意where条件最好用主键或者唯一索引，这样操作是行级锁，否则update时会锁表
      ~~~
-     update  set xxx=xx,version=version+1 where id=xx and version=xx
+     update t set xxx=xx,version=version+1 where id=xx and version=xx
      ~~~
 ### 3.2.接口层面
 * 分布式锁(redis或者zk)：高并发场景杀手锏，保证同一时刻只有一个操作进行
